tests/baselines/reference/moduledecl.errors.txt
moduledecl.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(4,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(4,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(7,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(7,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(7,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(11,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(18,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(47,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(84,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(85,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(90,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(95,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(97,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(98,16): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(104,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(105,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(106,16): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(107,20): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(118,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(122,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(126,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(130,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(138,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(178,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduledecl.ts(195,5): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== moduledecl.ts (26 errors) ====
    module a {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }
    
    module b.a {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }
    
    module c.a.b {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        import ma = a;
    }
    
    module mImport {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        import d = a;
        import e = b.a;
        import d1 = a;
        import e1 = b.a;
    }
    
    module m0 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function f1() {
        }
    
        function f2(s: string);
        function f2(n: number);
        function f2(ns: any) {
        }
    
        class c1 {
            public a : ()=>string;
            private b: ()=>number;
            private static s1;
            public static s2;
        }
    
        interface i1 {
            () : Object;
            [n: number]: c1;
        }
    
        import m2 = a;
        import m3 = b;
        import m4 = b.a;
        import m5 = c;
        import m6 = c.a;
        import m7 = c.a.b;
    }
    
    module m1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function f1() {
        }
    
        export function f2(s: string);
        export function f2(n: number);
        export function f2(ns: any) {
        }
    
        export class c1 {
            public a: () =>string;
            private b: () =>number;
            private static s1;
            public static s2;
    
            public d() {
                return "Hello";
            }
    
            public e: { x: number; y: string; };
            constructor (public n, public n2: number, private n3, private n4: string) {
            }
        }
    
        export interface i1 {
            () : Object;
            [n: number]: c1;
        }
    
        import m2 = a;
        import m3 = b;
        import m4 = b.a;
        import m5 = c;
        import m6 = c.a;
        import m7 = c.a.b;
    }
    
    module m {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module m2 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            var a = 10;
            export var b: number;
        }
    
        export module m3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export var c: number;
        }
    }
    
    module m {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        export module m25 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export module m5 {
                   ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                export var c: number;
            }
        }
    }
    
    module m13 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module m4 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export module m2 {
                   ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                export module m3 {
                       ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                    export var c: number;
                }
            }
    
            export function f() {
                return 20;
            }
        }
    }
    
    declare module m4 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var b;
    }
    
    declare module m5 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var c;
    }
    
    declare module m43 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var b;
    }
    
    declare module m55 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var c;
    }
    
    declare module "m3" {
        export var b: number;
    }
    
    module exportTests {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class C1_public {
            private f2() {
                return 30;
            }
    
            public f3() {
                return "string";
            }
        }
        class C2_private {
            private f2() {
                return 30;
            }
    
            public f3() {
                return "string";
            }
        }
    
        export class C3_public {
            private getC2_private() {
                return new C2_private();
            }
            private setC2_private(arg: C2_private) {
            }
            private get c2() {
                return new C2_private();
            }
            public getC1_public() {
                return new C1_public();
            }
            public setC1_public(arg: C1_public) {
            }
            public get c1() {
                return new C1_public();
            }
        }
    }
    
    declare module mAmbient {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        class C {
            public myProp: number;
        }
    
        function foo() : C;
        var aVar: C;
        interface B {
            x: number;
            y: C;
        }
        enum e {
            x,
            y,
            z
        }
    
        module m3 {
        ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            class C {
                public myProp: number;
            }
    
            function foo(): C;
            var aVar: C;
            interface B {
                x: number;
                y: C;
            }
            enum e {
                x,
                y,
                z
            }
        }
    }
    
    function foo() {
        return mAmbient.foo();
    }
    
    var cVar = new mAmbient.C();
    var aVar = mAmbient.aVar;
    var bB: mAmbient.B;
    var eVar: mAmbient.e;
    
    function m3foo() {
        return mAmbient.m3.foo();
    }
    
    var m3cVar = new mAmbient.m3.C();
    var m3aVar = mAmbient.m3.aVar;
    var m3bB: mAmbient.m3.B;
    var m3eVar: mAmbient.m3.e;
    
    